<resources>
    <string name="app_name" translatable="false">ProCampo</string>
    <string name="texto_bienvenida">Bienvenido a ProCampo</string>
    <string name="descripcion_bienvenida">Inicie sesión o registrese para poder disfrutar de la aplicación en su teléfono o tablet</string>
    <string name="copyright" translatable="false">© Iván Pérez Molina</string>
    <string name="texto_boton_registrarse">Crear cuenta</string>
    <string name="texto_boton_entrar">Entrar</string>
    <string name="texto_registrar_cuenta">Registro en ProCampo</string>
    <string name="nombre_registro">Nombre</string>
    <string name="apellidos_registro">Apellidos</string>
    <string name="telefono_registro">Teléfono</string>
    <string name="correo_Registro">Correo Electrónico</string>
    <string name="contraseña_registro">Contraseña</string>
    <string name="texto_boton_registro">Registrar</string>
    <string name="texto_boton_cancelar">Cancelar</string>
    <string name="error_campo_vacio">Algun campo esta vacio</string>
    <string name="error_en_Registro">No se ha podido completar el registro</string>
    <string name="texto_bienvenida_login">Acceder a ProCampo</string>
    <string name="texto_btn_acceder">Acceder</string>
    <string name="email_Login">Su Correo</string>
    <string name="contraseña_Login">Su clave</string>
    <string name="registro_ok">Se ha realizado correctamente el registro</string>
    <string name="doble_usuario_error">Este usuario ya existe.</string>
    <string name="login_ok">Logueo realizado con exito</string>
    <string name="login_error">Logueado no completado</string>
    <string name="texto_salir">Salir de ProCampo</string>
    <string name="mis_recolectas">MIS RECOLECTAS</string>
    <string name="insertar_recolecta">Insertar una recolecta</string>
    <string name="insertar_kilos_recolecta">Kilos</string>
    <string name="insertar_fecha_recolecta">Fecha</string>
    <string name="insertar_dat_recolecta" translatable="false">DAT</string>
    <string name="insertar_matricula_recolecta">Matricula del coche</string>
    <string name="insertar_cultivo_recolecta">Cultivo de origen</string>
    <string name="funciones">Funcionalidades</string>
    <string name="añadirRecolecta">Añadir Recolecta</string>
    <string name="llamame">Llamar al admin.</string>
    <string name="actualizar_recolecta">Actualizar la recolecta</string>
    <string name="sub_actualizar_recolecta">Actualice los datos y cuando esten correctos, guarde cambios</string>
    <string name="actualizado_recolecta_ok">Recolecta actualizada correctamente</string>
    <string name="reset">Introduce el correo con el que estes registrado en ProCampo, a continuación recibirá un correo a su e-mail donde se le guiara para restablecer su contraseña</string>
</resources>
