<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/difuminado"
    tools:context=".MainActivity">

    <!--IMAGEN-->

    <ImageView
        android:id="@+id/globalcampo_logo"
        android:layout_width="342dp"
        android:layout_height="169dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106"
        app:srcCompat="@drawable/procampo_logo" />

    <!--Bienvenido a GlobalCampo-->
    <TextView
        android:id="@+id/texto_bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/texto_bienvenida"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421" />

    <!--Texto de bienvenida-->
    <TextView
        android:id="@+id/descripcion_bienvenidad"
        android:layout_width="288dp"
        android:layout_height="50dp"
        android:hint="@string/descripcion_bienvenida"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522" />

    <!--Botones entrar y register-->
    <Button
        android:id="@+id/boton_registrarse"
        android:layout_width="214dp"
        android:layout_height="50dp"
        android:background="#A1ADA1"
        android:hint="@string/texto_boton_registrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcion_bienvenidad"
        app:layout_constraintVertical_bias="0.483" />

    <Button
        android:id="@+id/boton_entrar"
        android:layout_width="214dp"
        android:layout_height="50dp"
        android:background="#A8B500"
        android:hint="@string/texto_boton_entrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcion_bienvenidad"
        app:layout_constraintVertical_bias="0.261" />

    <!--Copyright-->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/copyright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99" />

</androidx.constraintlayout.widget.ConstraintLayout>