<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context=".InsertarRecolectaActivity">

    <!--Campo "Fecha"-->

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/insertar_recolecta"
        android:textSize="25dp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/fecha"
        android:layout_width="314dp"
        android:layout_height="49dp"
        android:hint="@string/insertar_fecha_recolecta"
        android:inputType="datetime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kilos"
        app:layout_constraintVertical_bias="0.035" />

    <!--Campo "KILOS"-->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/kilos"
        android:layout_width="314dp"
        android:layout_height="49dp"
        android:hint="@string/insertar_kilos_recolecta"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.071" />

    <!--Campo DAT-->

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/dat"
        android:layout_width="314dp"
        android:layout_height="49dp"
        android:hint="@string/insertar_dat_recolecta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fecha"
        app:layout_constraintVertical_bias="0.04" />

    <!--Campo "Matricula"-->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/matricula"
        android:layout_width="314dp"
        android:layout_height="49dp"
        android:hint="@string/insertar_matricula_recolecta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dat"
        app:layout_constraintVertical_bias="0.051" />

    <!--Campo "Cultivo"-->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/cultivo"
        android:layout_width="314dp"
        android:layout_height="49dp"
        android:hint="@string/insertar_cultivo_recolecta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matricula"
        app:layout_constraintVertical_bias="0.063" />



    <Button
        android:id="@+id/boton_aceptar_insertar"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:background="@drawable/ic_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752" />

    <Button
        android:id="@+id/boton_cancelar_insertar"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:background="@drawable/ic_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="214dp"
        android:layout_height="185dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cultivo"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/olivo2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Inserte datos para poder agregar una nueva recolecta"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />


</androidx.constraintlayout.widget.ConstraintLayout>
