<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="251dp"
        android:layout_height="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069"
        app:srcCompat="@drawable/procampo_logo" />

    <TextView
        android:id="@+id/texto_bienvenida_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/texto_bienvenida_login"
        android:textSize="25dp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <!--Email-->
    <EditText
        android:id="@+id/correoLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_Login"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto_bienvenida_login"
        app:layout_constraintVertical_bias="0.062" />
    <!--Contraseña-->
    <EditText
        android:id="@+id/contraseñaLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/contraseña_Login"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correoLogin"
        app:layout_constraintVertical_bias="0.049" />

    <Button
        android:id="@+id/botonAccederLogin"
        android:layout_width="214dp"
        android:layout_height="33dp"
        android:layout_margin="5dp"
        android:background="#A8B500"
        android:hint="@string/texto_btn_acceder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseñaLogin"
        app:layout_constraintVertical_bias="0.057" />

    <Button
        android:id="@+id/botonCancelarLogin"
        android:layout_width="214dp"
        android:layout_height="33dp"
        android:layout_margin="50dp"
        android:background="#A1ADA1"
        android:hint="@string/texto_boton_cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseñaLogin"
        app:layout_constraintVertical_bias="0.111" />

    <Button
        android:id="@+id/botonReset"
        android:layout_width="214dp"
        android:layout_height="33dp"
        android:layout_margin="50dp"
        android:background="#96A722"
        android:hint="¿Has olvidado la contraseña?"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseñaLogin"
        app:layout_constraintVertical_bias="0.389" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="121dp"
        android:layout_height="129dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonAccederLogin"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/olivo" />

</androidx.constraintlayout.widget.ConstraintLayout>