<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActualizarRecolectaActivity">

    <!--Campo "Fecha"-->

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/actualizar_recolecta"
        android:textSize="25dp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Campo "KILOS"-->

    <!--Campo DAT-->

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/fechaActualizar"
        android:layout_width="242dp"
        android:layout_height="48dp"
        android:hint="@string/insertar_fecha_recolecta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kilosActualizar"
        app:layout_constraintVertical_bias="0.037" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/kilosActualizar"
        android:layout_width="242dp"
        android:layout_height="48dp"

        android:hint="@string/insertar_kilos_recolecta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.068" />

    <!--Campo "Matricula"-->

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/datActualizar"
        android:layout_width="242dp"
        android:layout_height="48dp"
        android:hint="@string/insertar_dat_recolecta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fechaActualizar"
        app:layout_constraintVertical_bias="0.035" />


    <!--Campo "Cultivo"-->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/matriculaActualizar"
        android:layout_width="242dp"
        android:layout_height="48dp"
        android:hint="Matricula"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datActualizar"
        app:layout_constraintVertical_bias="0.044" />

    <!--Campo "Cultivo"-->


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/cultivoActualizar"
        android:layout_width="241dp"
        android:layout_height="48dp"
        android:hint="@string/insertar_cultivo_recolecta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matriculaActualizar"
        app:layout_constraintVertical_bias="0.049" />

    <Button
        android:id="@+id/boton_aceptar_actualizar"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:background="@drawable/ic_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.837" />

    <Button
        android:id="@+id/boton_cancelar_actualizar"
        android:layout_width="57dp"
        android:layout_height="49dp"
        android:background="@drawable/ic_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.837" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="161dp"
        android:layout_height="119dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cultivo"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ramita" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_actualizar_recolecta"
        android:textSize="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />

    <!--Campo "Cultivo"-->

    <TextView
        android:id="@+id/catastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Recolecta registrada con el código:"
        app:layout_constraintBottom_toTopOf="@+id/boton_cancelar_actualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cultivoActualizar"
        app:layout_constraintVertical_bias="0.243" />

    <TextView
        android:id="@+id/codigoRegistro"
        android:layout_width="298dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        android:editable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catastro" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="53dp"
        android:layout_height="21dp"
        android:text="Kilos:"
        android:textColor="#000"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/kilosActualizar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="81dp"
        android:layout_height="23dp"
        android:text="Matricula:"
        android:textColor="#000"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/matriculaActualizar"
        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="66dp"
        android:layout_height="26dp"
        android:text="Cultivo :"
        android:textColor="#000"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cultivoActualizar"
        app:layout_constraintHorizontal_bias="0.964"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="46dp"
        android:layout_height="22dp"
        android:text="DAT:"
        android:textColor="#000"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/datActualizar"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="62dp"
        android:layout_height="23dp"
        android:text="Fecha:"
        android:textColor="#000"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fechaActualizar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />


</androidx.constraintlayout.widget.ConstraintLayout>